--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -30,7 +30,7 @@ android {
 
 dependencies {
 
-    def camerax_version = "1.3.0-alpha05"
+    def camerax_version = "1.1.0-beta01"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
