--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
 
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
