--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
 
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
